...
  final ChatPageController? chatPageController;

  @override
  Widget build(BuildContext context) {
    final t = Translations.of(context);
    return PopupMenuButton<_GearActionEnum>(
      key: const Key('settings-gear-menu'),
      icon: const Icon(Icons.settings),
      tooltip: t.settings.gearMenu.settingsTooltip,
      onSelected: (action) => _onSelected(context, action),
      itemBuilder: (_) {
        final session = chatPageController?.selectedChat;
        final charEnabled = character != null;
...
            child: ListTile(
              leading: const Icon(Icons.language),
              title: Text(t.settings.gearLanguage),
            ),
          ),
          PopupMenuItem(
            key: const Key('settings-app-settings'),
            value: _GearActionEnum.appSettings,
            child: ListTile(
              leading: const Icon(Icons.settings),
              title: Text(t.settings.gearMenu.appSettings),
            ),
          ),
...
